--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
     "dlv": "^1.1.3",
     "eastasianwidth": "^0.2.0",
     "emoji-regex": "^9.2.2",
+    "express": "^4.21.0",
     "fast-glob": "^3.3.2",
     "fastq": "^1.17.1",
     "fill-range": "^7.1.1",
     "foreground-child": "^3.3.0",
-    "fsevents": "^2.3.3",
     "function-bind": "^1.1.2",
     "glob": "^10.4.5",
     "glob-parent": "^6.0.2",
@@ -97,10 +97,15 @@
     "wrap-ansi-cjs": "^7.0.0",
     "yaml": "^2.5.1"
   },
+
+  "optionalDependencies": {
+    "fsevents": "^2.3.3"
+  },
+
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx tailwindcss -i ./src/input.css -o ./public/style.css --watch"
-    
+    "build": "npx tailwindcss -o build.css --minify; mv build.css ./public/style.css",
+    "build-dev": "npx tailwindcss -i ./src/input.css -o ./public/style.css --watch"
   },
   "keywords": [],
   "author": "",
